--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        
+        <header>
+            <a href="index.html">Home</a>
+            <a href="AbtBus.html">About the bus</a>
+            <a href="AbtUs.html">About us</a>
+            <a href="sources.html">Sources</a>
+        </header>
+        <main></main>
+        <footer></footer>
     </body>
 </html>
