--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snowball challenge</title>
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="css/navbar.css">
+        <link rel="stylesheet" href="css/stylesheet.css">
     </head>
     <body>
         <header>
-            <a href="index.html">Home</a>
-            <a href="AbtBus.html">About the bus</a>
-            <a href="AbtUs.html">About us</a>
-            <a href="sources.html">Sources</a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="AbtBus.html">About the bus</a>
+                <a href="AbtUs.html">About us</a>
+                <a href="sources.html">Sources</a>
+            </nav>
         </header>
         <main></main>
         <footer></footer>
