--- a/AbtBus.html
+++ b/AbtBus.html
@@ -6,3 +6,13 @@
 <title>About Bus</title>
 
 </head>
+<header>
+  <nav>
+    <a href= "index.html">Home</a>
+    <a href="AbtUs.html">About us</a>
+  </nav>
+</header>  
+
+<body>
+</body>
+</html>
