--- a/AbtBus.html
+++ b/AbtBus.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <link rel="Stylesheet" href="css/stylesheet.css">
+<link rel="Stylesheet" href="css/navbar.css">
 <meta charset ="utf-8/">
 <title>About Bus</title>
 
