--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
                 <a href="sources.html">Sources</a>
             </nav>
         </header>
-        <main></main>
-        <footer></footer>
+        <main>
+            <div id="bigImage"></div>
+            <p> 
+                Ea Lorem dolor magna aliqua cupidatat exercitation duis esse duis sunt fugiat exercitation ad. Anim exercitation reprehenderit fugiat nostrud magna exercitation. 
+                Ipsum eiusmod cupidatat aliquip ullamco Lorem. Proident sunt sit amet excepteur enim eu irure occaecat do ipsum. Id nisi fugiat ullamco velit irure dolore anim. 
+                Non exercitation cupidatat officia sunt ex commodo cupidatat. Excepteur quis ullamco non laboris aliquip ad labore mollit.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, non expedita nulla facere repellendus perferendis magni hic ducimus suscipit quos est neque quae 
+                eligendi alias veritatis cupiditate magnam libero optio?
+            </p>
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
