--- a/AbtUs.html
+++ b/AbtUs.html
@@ -3,9 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About us</title>
+        <title>Snowball challenge</title>
+        <link rel="stylesheet" href="css/navbar.css">
+        <link rel="stylesheet" href="css/stylesheet.css">
     </head>
     <body>
-        
+        <header>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="AbtBus.html">About the bus</a>
+                <a href="sources.html">Sources</a>
+            </nav>
+        </header>
+        <main>
+            <h2>About us</h2>
+            <p>
+                Ida Michelle Jacobsen and Thea Emilie Haugen. <br>
+                Two students working to achieve quality education for all.
+            </p>
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
