--- a/AbtBus.html
+++ b/AbtBus.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="Stylesheet" href="css/stylesheet.css">
-<link rel="Stylesheet" href="css/navbar.css">
-<meta charset ="utf-8/">
-<title>About Bus</title>
-
+    <link rel="Stylesheet" href="css/stylesheet.css">
+    <link rel="Stylesheet" href="css/navbar.css">
+    <meta charset ="utf-8/">
+    <title>About Bus</title>
 </head>
-<header>
-  <nav>
-    <a href= "index.html">Home</a>
-    <a href="AbtUs.html">About us</a>
-    <a href="sources.html">Sources</a>
-  </nav>
-</header>  
 
 <body>
-  <div><img src="images/BusImg.jpg"></div>
-  <p></p>
+<header>
+    <nav>
+        <a href= "index.html">Home</a>
+        <a href="AbtUs.html">About us</a>
+        <a href="sources.html">Sources</a>
+    </nav>
+</header>
+<img class="abtBusImg" src="images/BusImg.jpg">
+
+
+<p></p>
 </body>
 </html>
