--- a/AbtBus.html
+++ b/AbtBus.html
@@ -18,6 +18,9 @@
 <img class="abtBusImg" src="images/BusImg.jpg">
 
 
-<p></p>
+<p class="pBus">Buses have long been a part of the busy day to day life of many people. Some take the bus to get to work, others to school. Certain countries even have schoolbusses arranged to pick children up so that they can get to school. But why isn’t this readily available in developing countries already?
+The reasons are many. Lack of funding, lack of proper roads, lack of fuel, there’s a lot of things they lack. But what if the busses could run on sunrays? Well, there are already some countries and areas who’ve tried this. Like Shanghai. There exists busses with solar panels on their roof, which allows them to recharge everytime the sun shines!
+Now that would come in handy in countries where there is hardly any other type of weather. If one were to place out such busses in different regents of developing countries, they could be used to transport children to school and back to aid them in getting an education.
+</p>
 </body>
 </html>
