--- a/AbtBus.html
+++ b/AbtBus.html
@@ -15,12 +15,23 @@
         <a href="sources.html">Sources</a>
     </nav>
 </header>
-<img class="abtBusImg" src="images/BusImg.jpg">
+<div id="busB">
 
-
-<p class="pBus">Buses have long been a part of the busy day to day life of many people. Some take the bus to get to work, others to school. Certain countries even have schoolbusses arranged to pick children up so that they can get to school. But why isn’t this readily available in developing countries already?
-The reasons are many. Lack of funding, lack of proper roads, lack of fuel, there’s a lot of things they lack. But what if the busses could run on sunrays? Well, there are already some countries and areas who’ve tried this. Like Shanghai. There exists busses with solar panels on their roof, which allows them to recharge everytime the sun shines!
-Now that would come in handy in countries where there is hardly any other type of weather. If one were to place out such busses in different regents of developing countries, they could be used to transport children to school and back to aid them in getting an education.
+<p class="bus-p">Buses have long been a part of the busy day to day life of many
+    people. Some take the bus to get to work, others to school.
+    Many countries even have school busses arranged to pick children up
+    so that they can get to school.
+   In developing countries, there is a lack of funding for
+    school. They might not be able to afford electric charging stations
+    stations, and normal busses pollutes the air. However,
+    there exists busses with solar panels on their roof,
+    which allows them to recharge everytime the sun shines!
+Now If one were to place out such busses in
+    different regents of developing countries, they could be used to
+    transport children to school and back to aid them in getting an education.
 </p>
+<img class="abtBusImg" src="images/BusImg.jpg"
+         alt="A digitally drawn picture of a bus with solar panels">
+</div>
 </body>
 </html>
