--- a/AbtBus.html
+++ b/AbtBus.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="Stylesheet" href="css/stylesheet.css">
+    <link rel="Stylesheet" href="css/busstylesheet.css">
     <link rel="Stylesheet" href="css/navbar.css">
     <meta charset ="utf-8/">
     <title>About Bus</title>
 </head>
 
-<body>
+<body id="bodyB">
 <header>
     <nav>
         <a href= "index.html">Home</a>
@@ -15,7 +15,7 @@
         <a href="sources.html">Sources</a>
     </nav>
 </header>
-<div id="busB">
+<main>
 
 <p class="bus-p">Buses have long been a part of the busy day to day life of many
     people. Some take the bus to get to work, others to school.
@@ -30,8 +30,8 @@ Now If one were to place out such busses in
     different regents of developing countries, they could be used to
     transport children to school and back to aid them in getting an education.
 </p>
-<img class="abtBusImg" src="images/BusImg.jpg"
+<img src="images/BusImg.jpg"
          alt="A digitally drawn picture of a bus with solar panels">
-</div>
+</main>
 </body>
 </html>
