--- a/AbtBus.html
+++ b/AbtBus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="Stylesheet" href="css/busstylesheet.css">
+    <link rel="Stylesheet" href="css/us_style.css">
     <link rel="Stylesheet" href="css/navbar.css">
     <meta charset ="utf-8/">
     <title>About Bus</title>
