--- a/AbtUs.html
+++ b/AbtUs.html
@@ -16,6 +16,7 @@
             </nav>
         </header>
         <main>
+            <div id="bigImage"></div>
             <h2>About us</h2>
             <p>
                 Ida Michelle Jacobsen and Thea Emilie Haugen. <br>
