--- a/sources.html
+++ b/sources.html
@@ -18,6 +18,7 @@
         <main>
             <h2>Sources used</h2>
             <p>L. (2019, October 28). [A yellow school bus]. Retrieved October 20, 2020, from https://www.pexels.com/nb-no/bilde/kjoretoy-buss-skolebuss-bil-3143809/</p>
+            <p>Millenial, B. (2018, September 21). [Students with laptop]. Retrieved October 20, 2020, from https://www.pexels.com/nb-no/bilde/elev-forretningsfolk-forretningskvinner-forretningsmann-1438072/</p>
         </main>
         <footer>
 
