--- a/AbtUs.html
+++ b/AbtUs.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snowball challenge</title>
         <link rel="stylesheet" href="css/navbar.css">
-        <link rel="stylesheet" href="css/stylesheet.css">
+        <link rel="stylesheet" href="css/us_style.css">
     </head>
     <body>
         <header>
