--- a/AbtBus.html
+++ b/AbtBus.html
@@ -20,13 +20,13 @@
 <p class="bus-p">Buses have long been a part of the busy day to day life of many
     people. Some take the bus to get to work, others to school.
     Many countries even have school busses arranged to pick children up
-    so that they can get to school.
-   In developing countries, there is a lack of funding for
+    so that they can get to school. <br>
+    In developing countries, there is a lack of funding for
     school. They might not be able to afford electric charging stations
     stations, and normal busses pollutes the air. However,
     there exists busses with solar panels on their roof,
-    which allows them to recharge everytime the sun shines!
-Now If one were to place out such busses in
+    which allows them to recharge everytime the sun shines! <br>
+    Now If one were to place out such busses in
     different regents of developing countries, they could be used to
     transport children to school and back to aid them in getting an education.
 </p>
