--- a/AbtUs.html
+++ b/AbtUs.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snowball challenge</title>
         <link rel="stylesheet" href="css/navbar.css">
-        <link rel="stylesheet" href="css/us_style.css">
+        <link rel="stylesheet" href="css/stylesheet.css">
+        <link rel="stylesheet" href="css/us_stylesheet.css">
     </head>
     <body>
         <header>
@@ -16,15 +17,22 @@
             </nav>
         </header>
         <main>
-            <div id="bigImage"></div>
-            <h2>About us</h2>
-            <p>
-                Ida Michelle Jacobsen and Thea Emilie Haugen. <br>
-                Two students working to achieve quality education for all.
+            <h2 class="align">About us</h2>
+            <p class="align"><img src="images/us.png" alt="A generic photo of three students."></p>
+            <p class="align">
+                This page is made by Ida Michelle Jacobsen and Thea Emilie Haugen.
+            </p>
+            <p id="Fin">
+                <br>
+                We are two students working to achieve quality education for all,
+                through green methods of transportation.
+                We work as a team to bring this idea forward, in hopes that it might catch
+                the attention of more people. If possible, we'd want this idea to become reality
+                so that children in all countries have the opportunity to attend school.
             </p>
         </main>
         <footer>
-
+        <p>All rights reserved for students/previous students at OsloMet </p>
         </footer>
     </body>
 </html>
