--- a/AbtUs.html
+++ b/AbtUs.html
@@ -6,7 +6,7 @@
         <title>Snowball challenge</title>
         <link rel="stylesheet" href="css/navbar.css">
         <link rel="stylesheet" href="css/stylesheet.css">
-        <link rel="stylesheet" href="css/us_stylesheet.css">
+        <link rel="stylesheet" href="css/us_style.css">
     </head>
     <body>
         <header>
