--- a/AbtBus.html
+++ b/AbtBus.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="Stylesheet" href="css/busstylesheet.css">
-    <link rel="Stylesheet" href="css/navbar.css">
-    <meta charset ="utf-8/">
-    <title>About Bus</title>
-</head>
+    <head>
+        <link rel="Stylesheet" href="css/busstylesheet.css">
+        <link rel="Stylesheet" href="css/navbar.css">
+        <meta charset ="utf-8/">
+        <title>About Bus</title>
+    </head>
 
-<body id="bodyB">
-<header>
-    <nav>
-        <a href= "index.html">Home</a>
-        <a href="AbtUs.html">About us</a>
-        <a href="sources.html">Sources</a>
-    </nav>
-</header>
-<main>
-
-<p class="bus-p">Buses have long been a part of the busy day to day life of many
-    people. Some take the bus to get to work, others to school.
-    Many countries even have school busses arranged to pick children up
-    so that they can get to school. <br>
-    In developing countries, there is a lack of funding for
-    school. They might not be able to afford electric charging stations
-    stations, and normal busses pollutes the air. However,
-    there exists busses with solar panels on their roof,
-    which allows them to recharge everytime the sun shines! <br>
-    Now If one were to place out such busses in
-    different regents of developing countries, they could be used to
-    transport children to school and back to aid them in getting an education.
-</p>
-<img src="images/BusImg.jpg"
-         alt="A digitally drawn picture of a bus with solar panels">
-</main>
+    <body id="bodyB">
+    <header>
+        <nav>
+            <a href= "index.html">Home</a>
+            <a href="AbtUs.html">About us</a>
+            <a href="sources.html">Sources</a>
+        </nav>
+    </header>
+    <main>
+        <p class="bus-p">Buses have long been a part of the busy day to day life of many
+            people. Some take the bus to get to work, others to school.
+            Many countries even have school busses arranged to pick children up
+            so that they can get to school. <br>
+            In developing countries, there is a lack of funding for
+            school. They might not be able to afford electric charging stations
+            stations, and normal busses pollutes the air. However,
+            there exists busses with solar panels on their roof,
+            which allows them to recharge everytime the sun shines! <br>
+            Now If one were to place out such busses in
+            different regents of developing countries, they could be used to
+            transport children to school and back to aid them in getting an education.
+        </p>
+        <img src="images/BusImg.jpg"
+                alt="A digitally drawn picture of a bus with solar panels">
+    </main>
+    <footer>
+        <p>All rights reserved</p>
+        <p>Oslomet, Postboks 4, St. Olavs plass, 0130 Oslo</p>
+    </footer>
 </body>
 </html>
