--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             </p>
         </main>
         <footer>
-
+            <p>All rights reserved</p>
+            <p>Oslomet, Postboks 4, St. Olavs plass, 0130 Oslo</p>
         </footer>
     </body>
 </html>
