--- a/AbtUs.html
+++ b/AbtUs.html
@@ -24,7 +24,8 @@
             </p>
         </main>
         <footer>
-
+            <p>All rights reserved</p>
+            <p>Oslomet, Postboks 4, St. Olavs plass, 0130 Oslo</p>
         </footer>
     </body>
 </html>
