--- a/sources.html
+++ b/sources.html
@@ -21,7 +21,8 @@
             <p>Millenial, B. (2018, September 21). [Students with laptop]. Retrieved October 20, 2020, from https://www.pexels.com/nb-no/bilde/elev-forretningsfolk-forretningskvinner-forretningsmann-1438072/</p>
         </main>
         <footer>
-
+            <p>All rights reserved</p>
+            <p>Oslomet, Postboks 4, St. Olavs plass, 0130 Oslo</p>
         </footer>
     </body>
 </html>
