--- a/AbtBus.html
+++ b/AbtBus.html
@@ -16,18 +16,19 @@
         </nav>
     </header>
     <main>
+        <h2>About buses</h2>
         <p class="bus-p">Buses have long been a part of the busy day to day life of many
             people. Some take the bus to get to work, others to school.
             Many countries even have school buses arranged to pick children up
             so that they can get to school. <br>
             In developing countries, there is a lack of funding for
             school. They might not be able to afford electric charging stations
-            stations, and normal buses pollutes the air. However,
-            there exists busses with solar panels on their roof,
+            stations, and normal buses pollute the air. However,
+            there exists buses with solar panels on the roof,
             which allows them to recharge everytime the sun shines! <br>
             Now If one were to place out such buses in
             different regents of developing countries, they could be used to
-            transport children to school and back to aid them in getting an education.
+            transport children to and from school, and aid them in getting an education.
         </p>
         <img src="images/BusImg.jpg"
                 alt="A digitally drawn picture of a bus with solar panels">
