--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <main>
             <div id="bigImage"></div>
             <p> 
-                Ea Lorem dolor magna aliqua cupidatat exercitation duis esse duis sunt fugiat exercitation ad. Anim exercitation reprehenderit fugiat nostrud magna exercitation. 
-                Ipsum eiusmod cupidatat aliquip ullamco Lorem. Proident sunt sit amet excepteur enim eu irure occaecat do ipsum. Id nisi fugiat ullamco velit irure dolore anim. 
-                Non exercitation cupidatat officia sunt ex commodo cupidatat. Excepteur quis ullamco non laboris aliquip ad labore mollit.
+                The UN's sustainable development goal nr. 4 states that they aim to "Ensure inclusive and equitable quality education and promote lifelong learning opportunities for all."
+                Quality education for all is a goal almost on par with ending poverty, hunger and preventable illnesses. Eduacation is the cornerstone of progress, 
+                and with it, many more will be able to help themselves. 
             </p>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, non expedita nulla facere repellendus perferendis magni hic ducimus suscipit quos est neque quae 
-                eligendi alias veritatis cupiditate magnam libero optio?
+                So why school-buses? Well, we found that by offering a means of transportation to and from school, we could both encouage students to attend, and make school more accessible to those
+                living a long distance from the nearest school. By making eduaction easier to access, we could ensure a higher rate of atendance, and eventually literacy and numeracy as well.
+                The buses would be solar powered and electrical to help move towards other SDGs such asaffordable and clean energy. You can read more about this <a href="AbtBus.html">here</a>
             </p>
         </main>
         <footer>
