--- a/AbtUs.html
+++ b/AbtUs.html
@@ -20,7 +20,7 @@
             <h2 class="align">About us</h2>
             <p class="align"><img src="images/us.png" alt="A generic photo of three students."></p>
             <p class="align">
-                This page is made by Ida Michelle Jacobsen and Thea Emilie Haugen.
+                This page was made by Ida Michelle Jacobsen and Thea Emilie Haugen.
             </p>
             <p id="Fin">
                 <br>
