--- a/sources.html
+++ b/sources.html
@@ -17,8 +17,12 @@
         </header>
         <main>
             <h2>Sources used</h2>
-            <p>L. (2019, October 28). [A yellow school bus]. Retrieved October 20, 2020, from https://www.pexels.com/nb-no/bilde/kjoretoy-buss-skolebuss-bil-3143809/</p>
-            <p>Millenial, B. (2018, September 21). [Students with laptop]. Retrieved October 20, 2020, from https://www.pexels.com/nb-no/bilde/elev-forretningsfolk-forretningskvinner-forretningsmann-1438072/</p>
+            <p>
+                <a href="https://www.pexels.com/nb-no/bilde/kjoretoy-buss-skolebuss-bil-3143809/">L. (2019, October 28). [A yellow school bus]. Retrieved October 20, 2020</a>
+            </p>
+            <p>
+                <a href="https://www.pexels.com/nb-no/bilde/elev-forretningsfolk-forretningskvinner-forretningsmann-1438072/">Millenial, B. (2018, September 21). [Students with laptop]. Retrieved October 20, 2020</a>
+            </p>
         </main>
         <footer>
             <p>All rights reserved</p>
