--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <header>
             <nav>
+                <a href="Home.html">Home</a>
                 <a href="AbtBus.html">About the bus</a>
                 <a href="AbtUs.html">About us</a>
                 <a href="sources.html">Sources</a>
