--- a/AbtBus.html
+++ b/AbtBus.html
@@ -11,6 +11,7 @@
     <header>
         <nav>
             <a href= "index.html">Home</a>
+            <a href="AbtUs.html">About the bus </a>
             <a href="AbtUs.html">About us</a>
             <a href="sources.html">Sources</a>
         </nav>
