--- a/AbtUs.html
+++ b/AbtUs.html
@@ -13,6 +13,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="AbtBus.html">About the bus</a>
+                <a href="AbtUs.html">About us </a>
                 <a href="sources.html">Sources</a>
             </nav>
         </header>
