--- a/sources.html
+++ b/sources.html
@@ -13,6 +13,7 @@
                 <a href="index.html">Home</a>
                 <a href="AbtBus.html">About the bus</a>
                 <a href="AbtUs.html">About us</a>
+                <a href="sources.html">Sources</a>
             </nav>
         </header>
         <main>
