--- a/sources.html
+++ b/sources.html
@@ -23,6 +23,7 @@
             </p>
             <p>
                 <a href="https://www.pexels.com/nb-no/bilde/elev-forretningsfolk-forretningskvinner-forretningsmann-1438072/">Millenial, B. (2018, September 21). [Students with laptop]. Retrieved October 20, 2020</a>
+                Jacobsen, I. M. (n.d.). Buss [Digital image]. Retrieved October 20, 2020. Not published electronically.
             </p>
         </main>
         <footer>
