--- a/AbtBus.html
+++ b/AbtBus.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="Stylesheet" href="css/busstylesheet.css">
         <link rel="Stylesheet" href="css/navbar.css">
+        <link rel="Stylesheet" href="css/footer.css">
         <meta charset ="utf-8">
         <title>About Bus</title>
     </head>
