--- a/AbtBus.html
+++ b/AbtBus.html
@@ -38,6 +38,10 @@
     <footer>
         <p>All rights reserved</p>
         <p>Oslomet, Postboks 4, St. Olavs plass, 0130 Oslo</p>
+        <div class="foot">
+       <p class="footer">Made by Tobias Fremming and
+           Ida Michelle Jacobsen</p>
+   </div>
     </footer>
 </body>
 </html>
